--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ color:white;
 padding: 200px;
 background-position-x: center;
 background-color:black;
-background: url("./tea.jpeg");
+background: url("./assets/tea.jpeg");
 background-repeat: no-repeat;
 background-size: cover;
 margin:0;
