--- a/main.css
+++ b/main.css
@@ -1,8 +1,10 @@
 html, body {
   box-sizing: border-box;
   background-color: rgb(255,139,0);
-  margin:0;
 
+}
+body {
+  margin:0;
 }
 .header {
 text-align: center;
@@ -34,11 +36,7 @@ padding: 14px 16px;
 text-decoration: none;
 }
 
-/* nav on hover*/
-.topnav a:hover {
-  background-color: rgb(197, 149, 15);
-  color: rgb(3, 2, 1);
-}
+
 /* 3 columns floating next ot each other*/
 .column {
   width:33.33;
@@ -58,18 +56,4 @@ text-decoration: none;
   .column {
     width: 100%;
   }
-}
-
-/* .footer {
-  background-color: aliceblue;
-  padding: 10px;
-  text-align: center;
-}*/ 
-.learn{
-  /* background-color: #df7219; */
-  padding:100px;
-  text-align: left;
-}
-#lingo{
-  background-color: blanchedalmond;
 }
