--- a/main.css
+++ b/main.css
@@ -62,22 +62,34 @@ text-decoration: none;
   width: 100%;
 }
 .flip-card {
-  width: 300px;
-  height: 200px;
-  border: 1px solid #f1f1f1;
-  margin: 0;
-  padding: 0;
+  width:200px;
+  height: 80px;
   background-color: transparent;
   perspective: 1000pz;
 }
 .flip-card-inner {
   position:relative;
   width: 100%;
-  height: 100%;
-  text-align: center; 
-  transition: transform 0.8s ;
+  height: 100%; 
+  transition: transform .6s ;
   transform-style: preserve-3d;
+  text-align: center;
+  display: inline-block;
 }
-.flip-card:hover .flip-card-inner {
+.flip-card:hover  .flip-card-inner {
   transform: rotateY(180deg);
+}
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  
+}
+
+.flip-card-back {
+  background-color:rgb(0 ,160, 205);
+  transform: rotateY(180deg);
+  
 }
