--- a/main.css
+++ b/main.css
@@ -1,8 +1,9 @@
 html, body {
-  background-color: #000000;
+background-color: #f7f7f7;
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23e8a217' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23940c0c' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23b8960b' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23811609' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%238d860f' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%236f1b07' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23677517' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%235d1c06' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%2347631d' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%234d1c06' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%232c4f1f' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%233d1a07' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
 background-attachment: fixed;
 background-size: cover;
+}
 
 a {
   text-decoration: none;
