--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 background-attachment: fixed;
 background-size: cover;
 font-family: Arial, Helvetica, sans-serif;
-overflow-y: none;
+overflow-x: none;
 }
 
 a {
