--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@ background-attachment: fixed;
 background-size: cover;
 font-family: Arial, Helvetica, sans-serif;
 overflow-x: none;
+
 }
 
 a {
@@ -45,20 +46,19 @@ padding: 14px 16px;
 text-decoration: none;
 }
 
-
-/* 3 columns floating next ot each other*/
 .column {
-  padding: 15px;
+  font-size: 10px;
   text-align: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 /*clear floats after the columns*/
 .row {
   display:table;
   width: 100%;
-  border-spacing: 200px;
-  text-align: center;
+  border-spacing: 250px;
 }
+
 .form-container {
   width: 100%;
   max-width: 500px;
